crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@328.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select testrngfunc();
---
SelectStmt@0..21
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..18
    FuncCall@7..18
      Ident@7..18 "testrngfunc"
  Ascii40@18..19 "("
  Ascii41@19..20 ")"
  Ascii59@20..21 ";"

