crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@349.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create or replace function testrngfunc() returns setof rngfunc_type as $$\n  select 7.136178319899999964, 7.136178319899999964;\n$$ language sql volatile;"
---
CreateFunctionStmt@0..152
  Create@0..6 "create"
  Whitespace@6..7 " "
  Or@7..9 "or"
  Whitespace@9..10 " "
  Replace@10..17 "replace"
  Whitespace@17..18 " "
  Function@18..26 "function"
  Whitespace@26..27 " "
  Ident@27..38 "testrngfunc"
  Ascii40@38..39 "("
  Ascii41@39..40 ")"
  Whitespace@40..41 " "
  Returns@41..48 "returns"
  Whitespace@48..49 " "
  Setof@49..54 "setof"
  Whitespace@54..55 " "
  TypeName@55..67
    Ident@55..67 "rngfunc_type"
  Whitespace@67..68 " "
  DefElem@68..129
    As@68..70 "as"
    Whitespace@70..71 " "
    List@71..129
      Sconst@71..129 "$$\n  select 7.1361783 ..."
  Whitespace@129..130 " "
  DefElem@130..142
    Language@130..138 "language"
    Whitespace@138..139 " "
    SqlP@139..142 "sql"
  Whitespace@142..143 " "
  DefElem@143..151
    Volatile@143..151 "volatile"
  Ascii59@151..152 ";"

