crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@354.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create or replace function testrngfunc() returns setof rngfunc_type as $$\n  select 1, 2 union select 3, 4 order by 1;\n$$ language sql immutable;"
---
CreateFunctionStmt@0..144
  Create@0..6 "create"
  Whitespace@6..7 " "
  Or@7..9 "or"
  Whitespace@9..10 " "
  Replace@10..17 "replace"
  Whitespace@17..18 " "
  Function@18..26 "function"
  Whitespace@26..27 " "
  Ident@27..38 "testrngfunc"
  Ascii40@38..39 "("
  Ascii41@39..40 ")"
  Whitespace@40..41 " "
  Returns@41..48 "returns"
  Whitespace@48..49 " "
  Setof@49..54 "setof"
  Whitespace@54..55 " "
  TypeName@55..67
    Ident@55..67 "rngfunc_type"
  Whitespace@67..68 " "
  DefElem@68..120
    As@68..70 "as"
    Whitespace@70..71 " "
    List@71..120
      Sconst@71..120 "$$\n  select 1, 2 unio ..."
  Whitespace@120..121 " "
  DefElem@121..133
    Language@121..129 "language"
    Whitespace@129..130 " "
    SqlP@130..133 "sql"
  Whitespace@133..134 " "
  DefElem@134..143
    Immutable@134..143 "immutable"
  Ascii59@143..144 ";"

