crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@364.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into users values ('id',1,'email',true,11,true);"
---
InsertStmt@0..55
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "users"
  Whitespace@17..18 " "
  SelectStmt@18..53
    Values@18..24 "values"
    Whitespace@24..25 " "
    Ascii40@25..26 "("
    List@26..53
      AConst@26..30
        Sconst@26..30 "'id'"
      Ascii44@30..31 ","
      AConst@31..32
        Iconst@31..32 "1"
      Ascii44@32..33 ","
      AConst@33..40
        Sconst@33..40 "'email'"
      Ascii44@40..41 ","
      AConst@41..45
        TrueP@41..45 "true"
      Ascii44@45..46 ","
      AConst@46..48
        Iconst@46..48 "11"
      Ascii44@48..49 ","
      AConst@49..53
        TrueP@49..53 "true"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

